test_suite/alan-2022-examples/failing/007440_mutation.alan
source N begin relax end boolean
